[package]
name = "detacher"
version = "0.1.0"
edition = "2021"
authors = ["j-hc"]

[dependencies]
libc-print = "0.1"
sqlite = { version="0.31", default-features = false, features = ["linkage"] }

[profile.release-pr]
inherits = "release"
lto = "fat"
panic = "abort"
codegen-units = 1
strip = true
opt-level = 3

[profile.release-debug]
inherits = "release-pr"
strip = false

[profile.dev]
panic = "abort"

[features]
print_stdout = []
